--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2473,7 +2473,7 @@ input, select, textarea {
 		input[type="reset"]:active,
 		input[type="button"]:active,
 		.button:active {
-			background-color: rgba(73, 191, 157, 0.1);
+			background-color: #1985a1;
 			border-color: #1985a1;
 			color: #1985a1 !important;
 		}
