--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -484,7 +484,7 @@ input, select, textarea {
 
 		.row {
 			margin-top: 0;
-			margin-left: -2.5em;
+			margin-left: 0em;
 		}
 
 			.row > * {
@@ -727,7 +727,7 @@ input, select, textarea {
 
 				.row {
 					margin-top: 0;
-					margin-left: -2.5em;
+					margin-left: 0em;
 				}
 
 					.row > * {
@@ -972,7 +972,7 @@ input, select, textarea {
 
 				.row {
 					margin-top: 0;
-					margin-left: -2em;
+					margin-left: 0em;
 				}
 
 					.row > * {
@@ -1217,7 +1217,7 @@ input, select, textarea {
 
 				.row {
 					margin-top: 0;
-					margin-left: -2em;
+					margin-left: 0em;
 				}
 
 					.row > * {
@@ -1462,7 +1462,7 @@ input, select, textarea {
 
 				.row {
 					margin-top: 0;
-					margin-left: -1.5em;
+					margin-left: 0em;
 				}
 
 					.row > * {
@@ -1707,7 +1707,7 @@ input, select, textarea {
 
 				.row {
 					margin-top: 0;
-					margin-left: -1.5em;
+					margin-left: 0em;
 				}
 
 					.row > * {
@@ -2056,7 +2056,7 @@ input, select, textarea {
 			display: block;
 			height: 100%;
 			left: 0;
-			opacity: 0.5;
+			opacity: 0;
 			position: absolute;
 			top: 0;
 			width: 100%;
@@ -2064,7 +2064,10 @@ input, select, textarea {
 
 		.image.thumb {
 			text-align: center;
+			width: 30%;
 		}
+
+			
 
 			.image.thumb:after {
 				-moz-transition: opacity 0.2s ease-in-out;
@@ -2555,20 +2558,37 @@ input, select, textarea {
 /* Work Item */
 
 	.work-item {
-		margin: 0 0 2em 0;
+		padding: 1em 0 1em 0;
+		border-bottom: solid 2px #efefef;
 	}
 
+
 		.work-item .image {
-			margin: 0 0 1.5em 0;
+			margin: 0 1.5em 1.5em 0;
 		}
 
 		.work-item h3 {
-			font-size: 1em;
+			font-size: 1.2em;
 			margin: 0 0 0.5em 0;
+			font-weight: 1000;
+		}
+		.work-item h2 {
+			font-size: 1em;
+			margin:0;
+		}
+
+		.work-item h2 a {
+			font-weight: 1000;
+			font-style: italic;
+		}
+
+		.work-item strong{
+			font-size: 1em;
+			font-weight: 1000;
 		}
 
 		.work-item p {
-			font-size: 0.8em;
+			font-size: 0.9em;
 			line-height: 1.5em;
 			margin: 0;
 		}
@@ -2690,16 +2710,16 @@ input, select, textarea {
 /* Main */
 
 	#main {
-		margin-left: 35%;
-		max-width: 54em;
-		padding: 8em 4em 4em 4em;
-		width: calc(100% - 35%);
+		margin-left:27%;
+		max-width: 100%;
+		padding: 4em 4em 4em 4em;
+		width: calc(100% - 27%);
 	}
 
 		#main > section {
 			border-top: solid 2px #efefef;
-			margin: 4em 0 0 0;
-			padding: 4em 0 0 0;
+			margin: 2em 0 0 0;
+			padding: 2em 0 0 0;
 		}
 
 			#main > section:first-child {
@@ -3034,10 +3054,10 @@ input, select, textarea {
 		/* Main */
 
 			#main {
-				margin-left: 30%;
+				margin-left: 27%;
 				max-width: none;
-				padding: 6em 3em 3em 3em;
-				width: calc(100% - 30%);
+				padding: 3em 3em 3em 3em;
+				width: calc(100% - 27%);
 			}
 
 	}
@@ -3085,8 +3105,8 @@ input, select, textarea {
 
 			#footer {
 				background-attachment: scroll;
-				background-color: #1f1815;
-				background-image: url("images/overlay.png"), url("../../images/bg.jpg");
+				background-color: #e5e5e5;
+				/*background-image: url("images/overlay.png"), url("../../images/bg.jpg");*/
 				background-position: top left,						bottom center;
 				background-repeat: repeat,							no-repeat;
 				background-size: auto,							cover;
